Backport declaration sorting

--- a/packages/plugin-css/test/fixtures/ds-apple-hig/want.css
+++ b/packages/plugin-css/test/fixtures/ds-apple-hig/want.css
@@ -16,49 +16,71 @@
   --color-system-indigo: color(srgb 0.34509803921568627 0.33725490196078434 0.8392156862745098);
   --color-system-mint: color(srgb 0 0.7803921568627451 0.7450980392156863);
   --color-system-orange: color(srgb 1 0.5843137254901961 0);
-  --color-system-pink: color(srgb 1 0.17647058823529413 0.3333333333333333);
   --color-system-purple: color(srgb 0.6862745098039216 0.3215686274509804 0.8705882352941177);
+  --color-system-pink: color(srgb 1 0.17647058823529413 0.3333333333333333);
   --color-system-red: color(srgb 1 0.23137254901960785 0.18823529411764706);
   --color-system-teal: color(srgb 0.18823529411764706 0.6901960784313725 0.7803921568627451);
   --color-system-yellow: color(srgb 1 0.8 0);
-  --font-family-new-york: "New York";
-  --font-family-sf-compact: "SF Compact";
-  --font-family-sf-mono: "SF Mono";
   --font-family-sf-pro: "SF Pro";
   --font-family-sf-pro-rounded: "SF Pro Rounded";
-  --font-style-body-font-size: 17px;
-  --font-style-body-font-weight: 400;
-  --font-style-body-line-height: 22px;
-  --font-style-callout-font-size: 16px;
-  --font-style-callout-font-weight: 400;
-  --font-style-callout-line-height: 21px;
-  --font-style-caption1-font-size: 12px;
-  --font-style-caption1-font-weight: 400;
-  --font-style-caption1-line-height: 16px;
-  --font-style-caption2-font-size: 11px;
-  --font-style-caption2-font-weight: 400;
-  --font-style-caption2-line-height: 13px;
-  --font-style-footnote-font-size: 13px;
-  --font-style-footnote-font-weight: 400;
-  --font-style-footnote-line-height: 18px;
-  --font-style-headline-font-size: 17px;
-  --font-style-headline-font-weight: 600;
-  --font-style-headline-line-height: 22px;
+  --font-family-sf-compact: "SF Compact";
+  --font-family-sf-mono: "SF Mono";
+  --font-family-new-york: "New York";
+  --font-style-large-title-font-family: var(--font-family-sf-pro);
   --font-style-large-title-font-size: 34px;
   --font-style-large-title-font-weight: 400;
   --font-style-large-title-line-height: 41px;
-  --font-style-subhead-font-size: 15px;
-  --font-style-subhead-font-weight: 400;
-  --font-style-subhead-line-height: 20px;
+  --font-style-large-title-letter-spacing: 0;
+  --font-style-title1-font-family: var(--font-family-sf-pro);
   --font-style-title1-font-size: 28px;
   --font-style-title1-font-weight: 400;
   --font-style-title1-line-height: 34px;
+  --font-style-title1-letter-spacing: 0;
+  --font-style-title2-font-family: var(--font-family-sf-pro);
   --font-style-title2-font-size: 22px;
   --font-style-title2-font-weight: 400;
   --font-style-title2-line-height: 25px;
+  --font-style-title2-letter-spacing: 0;
+  --font-style-title3-font-family: var(--font-family-sf-pro);
   --font-style-title3-font-size: 20px;
   --font-style-title3-font-weight: 400;
   --font-style-title3-line-height: 25px;
+  --font-style-title3-letter-spacing: 0;
+  --font-style-headline-font-family: var(--font-family-sf-pro);
+  --font-style-headline-font-size: 17px;
+  --font-style-headline-font-weight: 600;
+  --font-style-headline-line-height: 22px;
+  --font-style-headline-letter-spacing: 0;
+  --font-style-body-font-family: var(--font-family-sf-pro);
+  --font-style-body-font-size: 17px;
+  --font-style-body-font-weight: 400;
+  --font-style-body-line-height: 22px;
+  --font-style-body-letter-spacing: 0;
+  --font-style-callout-font-family: var(--font-family-sf-pro);
+  --font-style-callout-font-size: 16px;
+  --font-style-callout-font-weight: 400;
+  --font-style-callout-line-height: 21px;
+  --font-style-callout-letter-spacing: 0;
+  --font-style-subhead-font-family: var(--font-family-sf-pro);
+  --font-style-subhead-font-size: 15px;
+  --font-style-subhead-font-weight: 400;
+  --font-style-subhead-line-height: 20px;
+  --font-style-subhead-letter-spacing: 0;
+  --font-style-footnote-font-family: var(--font-family-sf-pro);
+  --font-style-footnote-font-size: 13px;
+  --font-style-footnote-font-weight: 400;
+  --font-style-footnote-line-height: 18px;
+  --font-style-footnote-letter-spacing: 0;
+  --font-style-caption1-font-family: var(--font-family-sf-pro);
+  --font-style-caption1-font-size: 12px;
+  --font-style-caption1-font-weight: 400;
+  --font-style-caption1-line-height: 16px;
+  --font-style-caption1-letter-spacing: 0;
+  --font-style-caption2-font-family: var(--font-family-sf-pro);
+  --font-style-caption2-font-size: 11px;
+  --font-style-caption2-font-weight: 400;
+  --font-style-caption2-line-height: 13px;
+  --font-style-caption2-letter-spacing: 0;
 }
 
 @media (prefers-color-scheme: light) {
@@ -76,8 +98,8 @@
     --color-system-indigo: color(srgb 0.34509803921568627 0.33725490196078434 0.8392156862745098);
     --color-system-mint: color(srgb 0 0.7803921568627451 0.7450980392156863);
     --color-system-orange: color(srgb 1 0.5843137254901961 0);
-    --color-system-pink: color(srgb 1 0.17647058823529413 0.3333333333333333);
     --color-system-purple: color(srgb 0.6862745098039216 0.3215686274509804 0.8705882352941177);
+    --color-system-pink: color(srgb 1 0.17647058823529413 0.3333333333333333);
     --color-system-red: color(srgb 1 0.23137254901960785 0.18823529411764706);
     --color-system-teal: color(srgb 0.18823529411764706 0.6901960784313725 0.7803921568627451);
     --color-system-yellow: color(srgb 1 0.8 0);
@@ -98,8 +120,8 @@
   --color-system-indigo: color(srgb 0.34509803921568627 0.33725490196078434 0.8392156862745098);
   --color-system-mint: color(srgb 0 0.7803921568627451 0.7450980392156863);
   --color-system-orange: color(srgb 1 0.5843137254901961 0);
-  --color-system-pink: color(srgb 1 0.17647058823529413 0.3333333333333333);
   --color-system-purple: color(srgb 0.6862745098039216 0.3215686274509804 0.8705882352941177);
+  --color-system-pink: color(srgb 1 0.17647058823529413 0.3333333333333333);
   --color-system-red: color(srgb 1 0.23137254901960785 0.18823529411764706);
   --color-system-teal: color(srgb 0.18823529411764706 0.6901960784313725 0.7803921568627451);
   --color-system-yellow: color(srgb 1 0.8 0);
@@ -120,8 +142,8 @@
     --color-system-indigo: color(srgb 0.3686274509803922 0.3607843137254902 0.9019607843137255);
     --color-system-mint: color(srgb 0.4 0.8313725490196079 0.8117647058823529);
     --color-system-orange: color(srgb 1 0.6235294117647059 0.0392156862745098);
-    --color-system-pink: color(srgb 1 0.21568627450980393 0.37254901960784315);
     --color-system-purple: color(srgb 0.7490196078431373 0.35294117647058826 0.9490196078431372);
+    --color-system-pink: color(srgb 1 0.21568627450980393 0.37254901960784315);
     --color-system-red: color(srgb 1 0.27058823529411763 0.22745098039215686);
     --color-system-teal: color(srgb 0.25098039215686274 0.7843137254901961 0.8784313725490196);
     --color-system-yellow: color(srgb 1 0.8392156862745098 0.0392156862745098);
@@ -142,8 +164,8 @@
   --color-system-indigo: color(srgb 0.3686274509803922 0.3607843137254902 0.9019607843137255);
   --color-system-mint: color(srgb 0.4 0.8313725490196079 0.8117647058823529);
   --color-system-orange: color(srgb 1 0.6235294117647059 0.0392156862745098);
-  --color-system-pink: color(srgb 1 0.21568627450980393 0.37254901960784315);
   --color-system-purple: color(srgb 0.7490196078431373 0.35294117647058826 0.9490196078431372);
+  --color-system-pink: color(srgb 1 0.21568627450980393 0.37254901960784315);
   --color-system-red: color(srgb 1 0.27058823529411763 0.22745098039215686);
   --color-system-teal: color(srgb 0.25098039215686274 0.7843137254901961 0.8784313725490196);
   --color-system-yellow: color(srgb 1 0.8392156862745098 0.0392156862745098);
