fix(tailwind): use kebab-case for variable names (terrazzoapp#629)
lint

--- a/packages/plugin-tailwind/test/fixtures/primer/want.css
+++ b/packages/plugin-tailwind/test/fixtures/primer/want.css
@@ -61,37 +61,37 @@
   --color-red-7: #82071e;
   --color-red-8: #660018;
   --color-red-9: #4c0014;
-  --color-yellow-0-: #fff8c5;
-  --color-yellow-1-: #fae17d;
-  --color-yellow-2-: #eac54f;
-  --color-yellow-3-: #d4a72c;
-  --color-yellow-4-: #bf8700;
-  --color-yellow-5-: #9a6700;
-  --color-yellow-6-: #7d4e00;
-  --color-yellow-7-: #633c01;
-  --color-yellow-8-: #4d2d00;
-  --color-yellow-9-: #3b2300;
-  --font-sans-: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Noto Sans", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-  --spacing-xxs-: 2px;
-  --spacing-xs-: var(--size-4);
-  --spacing-sm-: 6px;
-  --spacing-md-: var(--size-8);
-  --spacing-lg-: var(--size-12);
-  --spacing-xl-: var(--size-16);
+  --color-yellow-0: #fff8c5;
+  --color-yellow-1: #fae17d;
+  --color-yellow-2: #eac54f;
+  --color-yellow-3: #d4a72c;
+  --color-yellow-4: #bf8700;
+  --color-yellow-5: #9a6700;
+  --color-yellow-6: #7d4e00;
+  --color-yellow-7: #633c01;
+  --color-yellow-8: #4d2d00;
+  --color-yellow-9: #3b2300;
+  --font-sans: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Noto Sans", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  --spacing-xxs: 2px;
+  --spacing-xs: var(--size-4);
+  --spacing-sm: 6px;
+  --spacing-md: var(--size-8);
+  --spacing-lg: var(--size-12);
+  --spacing-xl: var(--size-16);
   --radius-full: 9999px;
   --radius-large: 12px;
   --radius-medium: 6px;
   --radius-small: 3px;
-  --fooArray-0: #dafbe1;
-  --fooArray-1: #aceebb;
-  --fooArray-2: #6fdd8b;
-  --fooArray-3: #4ac26b;
-  --fooArray-4: #2da44e;
-  --fooArray-5: #1a7f37;
-  --fooArray-6: #116329;
-  --fooArray-7: #044f1e;
-  --fooArray-8: #003d16;
-  --fooArray-9: #002d11;
+  --foo-array-0: #dafbe1;
+  --foo-array-1: #aceebb;
+  --foo-array-2: #6fdd8b;
+  --foo-array-3: #4ac26b;
+  --foo-array-4: #2da44e;
+  --foo-array-5: #1a7f37;
+  --foo-array-6: #116329;
+  --foo-array-7: #044f1e;
+  --foo-array-8: #003d16;
+  --foo-array-9: #002d11;
 }
 
 @variant dark {
@@ -155,26 +155,26 @@
   --color-red-7: #8e1519;
   --color-red-8: #67060c;
   --color-red-9: #490202;
-  --color-yellow-0-: #f8e3a1;
-  --color-yellow-1-: #f2cc60;
-  --color-yellow-2-: #e3b341;
-  --color-yellow-3-: #d29922;
-  --color-yellow-4-: #bb8009;
-  --color-yellow-5-: #9e6a03;
-  --color-yellow-6-: #845306;
-  --color-yellow-7-: #693e00;
-  --color-yellow-8-: #4b2900;
-  --color-yellow-9-: #341a00;
-  --fooArray-0: #aff5b4;
-  --fooArray-1: #7ee787;
-  --fooArray-2: #56d364;
-  --fooArray-3: #3fb950;
-  --fooArray-4: #2ea043;
-  --fooArray-5: #238636;
-  --fooArray-6: #196c2e;
-  --fooArray-7: #0f5323;
-  --fooArray-8: #033a16;
-  --fooArray-9: #04260f;
+  --color-yellow-0: #f8e3a1;
+  --color-yellow-1: #f2cc60;
+  --color-yellow-2: #e3b341;
+  --color-yellow-3: #d29922;
+  --color-yellow-4: #bb8009;
+  --color-yellow-5: #9e6a03;
+  --color-yellow-6: #845306;
+  --color-yellow-7: #693e00;
+  --color-yellow-8: #4b2900;
+  --color-yellow-9: #341a00;
+  --foo-array-0: #aff5b4;
+  --foo-array-1: #7ee787;
+  --foo-array-2: #56d364;
+  --foo-array-3: #3fb950;
+  --foo-array-4: #2ea043;
+  --foo-array-5: #238636;
+  --foo-array-6: #196c2e;
+  --foo-array-7: #0f5323;
+  --foo-array-8: #033a16;
+  --foo-array-9: #04260f;
 }
 
 @variant light-hc {
@@ -238,26 +238,26 @@
   --color-red-7: #6e011a;
   --color-red-8: #5a0016;
   --color-red-9: #430011;
-  --color-yellow-0-: #fcf7be;
-  --color-yellow-1-: #f0ce53;
-  --color-yellow-2-: #d5a824;
-  --color-yellow-3-: #b58407;
-  --color-yellow-4-: #956400;
-  --color-yellow-5-: #744500;
-  --color-yellow-6-: #603700;
-  --color-yellow-7-: #4e2c00;
-  --color-yellow-8-: #3f2200;
-  --color-yellow-9-: #2e1800;
-  --fooArray-0: #d2fedb;
-  --fooArray-1: #82e596;
-  --fooArray-2: #43c663;
-  --fooArray-3: #26a148;
-  --fooArray-4: #117f32;
-  --fooArray-5: #055d20;
-  --fooArray-6: #024c1a;
-  --fooArray-7: #013d14;
-  --fooArray-8: #003110;
-  --fooArray-9: #00230b;
+  --color-yellow-0: #fcf7be;
+  --color-yellow-1: #f0ce53;
+  --color-yellow-2: #d5a824;
+  --color-yellow-3: #b58407;
+  --color-yellow-4: #956400;
+  --color-yellow-5: #744500;
+  --color-yellow-6: #603700;
+  --color-yellow-7: #4e2c00;
+  --color-yellow-8: #3f2200;
+  --color-yellow-9: #2e1800;
+  --foo-array-0: #d2fedb;
+  --foo-array-1: #82e596;
+  --foo-array-2: #43c663;
+  --foo-array-3: #26a148;
+  --foo-array-4: #117f32;
+  --foo-array-5: #055d20;
+  --foo-array-6: #024c1a;
+  --foo-array-7: #013d14;
+  --foo-array-8: #003110;
+  --foo-array-9: #00230b;
 }
 
 @variant dark-hc {
@@ -321,24 +321,24 @@
   --color-red-7: #e82a2f;
   --color-red-8: #cc1421;
   --color-red-9: #ad0116;
-  --color-yellow-0-: #fbe59e;
-  --color-yellow-1-: #fbd669;
-  --color-yellow-2-: #f7c843;
-  --color-yellow-3-: #f0b72f;
-  --color-yellow-4-: #e09b13;
-  --color-yellow-5-: #e09b13;
-  --color-yellow-6-: #c88508;
-  --color-yellow-7-: #ae7104;
-  --color-yellow-8-: #945d02;
-  --color-yellow-9-: #7b4900;
-  --fooArray-0: #acf7b6;
-  --fooArray-1: #72f088;
-  --fooArray-2: #4ae168;
-  --fooArray-3: #26cd4d;
-  --fooArray-4: #09b43a;
-  --fooArray-5: #09b43a;
-  --fooArray-6: #02a232;
-  --fooArray-7: #008c2c;
-  --fooArray-8: #007728;
-  --fooArray-9: #006222;
+  --color-yellow-0: #fbe59e;
+  --color-yellow-1: #fbd669;
+  --color-yellow-2: #f7c843;
+  --color-yellow-3: #f0b72f;
+  --color-yellow-4: #e09b13;
+  --color-yellow-5: #e09b13;
+  --color-yellow-6: #c88508;
+  --color-yellow-7: #ae7104;
+  --color-yellow-8: #945d02;
+  --color-yellow-9: #7b4900;
+  --foo-array-0: #acf7b6;
+  --foo-array-1: #72f088;
+  --foo-array-2: #4ae168;
+  --foo-array-3: #26cd4d;
+  --foo-array-4: #09b43a;
+  --foo-array-5: #09b43a;
+  --foo-array-6: #02a232;
+  --foo-array-7: #008c2c;
+  --foo-array-8: #007728;
+  --foo-array-9: #006222;
 }
