--- a/packages/plugin-css/test/fixtures/type-typography/want.css
+++ b/packages/plugin-css/test/fixtures/type-typography/want.css
@@ -3,19 +3,19 @@
  * ------------------------------------------- */
 
 :root {
-  --ds-typography-body-font-family: var(--ds-typography-family-body);
+  --ds-typography-body-font-family: inherit;
   --ds-typography-body-font-size: 16px;
   --ds-typography-body-font-weight: 400;
-  --ds-typography-body-font-variation-settings: "wght" 100, "opsz" 100, "wdth" 50;
   --ds-typography-body-line-height: 1.5;
+  --ds-typography-body-font-variation-settings: "wght" 100, "opsz" 100, "wdth" 50;
   --ds-typography-body-letter-spacing: 0;
   --ds-typography-body: var(--ds-typography-body-font-weight) var(--ds-typography-body-font-size)/var(--ds-typography-body-line-height) var(--ds-typography-body-font-family);
   --ds-typography-callout-font-family: var(--ds-typography-family-body);
   --ds-typography-callout-font-size: 18px;
-  --ds-typography-callout-font-variation-settings: "wght" 100, "opsz" 100, "wdth" 50;
   --ds-typography-callout-font-weight: 300;
-  --ds-typography-callout-font-style: italic;
   --ds-typography-callout-line-height: 1.5;
+  --ds-typography-callout-font-style: italic;
+  --ds-typography-callout-font-variation-settings: "wght" 100, "opsz" 100, "wdth" 50;
   --ds-typography-callout-letter-spacing: 0;
   --ds-typography-callout: var(--ds-typography-callout-font-style) var(--ds-typography-callout-font-weight) var(--ds-typography-callout-font-size)/var(--ds-typography-callout-line-height) var(--ds-typography-callout-font-family);
   --ds-typography-family-body: "IBM Plex Sans", system-ui, sans-serif;
@@ -24,44 +24,43 @@
   --ds-typography-label-font-family: var(--ds-typography-body-font-family);
   --ds-typography-label-font-size: var(--ds-typography-body-font-size);
   --ds-typography-label-font-weight: var(--ds-typography-body-font-weight);
-  --ds-typography-label-font-variation-settings: var(--ds-typography-body-font-variation-settings);
   --ds-typography-label-line-height: var(--ds-typography-body-line-height);
+  --ds-typography-label-font-variation-settings: var(--ds-typography-body-font-variation-settings);
   --ds-typography-label-letter-spacing: var(--ds-typography-body-letter-spacing);
   --ds-typography-label: var(--ds-typography-label-font-weight) var(--ds-typography-label-font-size)/var(--ds-typography-label-line-height) var(--ds-typography-label-font-family);
   --ds-typography-page-title-font-family: var(--ds-typography-family-heading);
   --ds-typography-page-title-font-size: 48px;
-  --ds-typography-page-title-font-variation-settings: "wght" 140, "opsz" 100, "wdth" 50;
   --ds-typography-page-title-font-weight: 600;
   --ds-typography-page-title-line-height: 1.25;
+  --ds-typography-page-title-font-variation-settings: "wght" 140, "opsz" 100, "wdth" 50;
   --ds-typography-page-title-letter-spacing: 0.125em;
   --ds-typography-page-title: var(--ds-typography-page-title-font-weight) var(--ds-typography-page-title-font-size)/var(--ds-typography-page-title-line-height) var(--ds-typography-page-title-font-family);
   --ds-typography-subheading-font-family: var(--ds-typography-family-heading);
   --ds-typography-subheading-font-size: 18px;
-  --ds-typography-subheading-font-variation-settings: "wght" 130, "opsz" 100, "wdth" 50;
   --ds-typography-subheading-font-weight: 500;
   --ds-typography-subheading-line-height: 24px;
   --ds-typography-subheading-letter-spacing: 0.25em;
+  --ds-typography-subheading-font-variation-settings: "wght" 130, "opsz" 100, "wdth" 50;
   --ds-typography-subheading-text-transform: uppercase;
   --ds-typography-subheading: var(--ds-typography-subheading-font-weight) var(--ds-typography-subheading-font-size)/var(--ds-typography-subheading-line-height) var(--ds-typography-subheading-font-family);
 }
 
 @media (width >= 600px) {
   :root {
-    --ds-typography-body-font-size: 14px;
     --ds-typography-body-font-family: inherit;
-    --ds-typography-body-font-variation-settings: "wght" 100, "opsz" 100, "wdth" 50;
+    --ds-typography-body-font-size: 14px;
     --ds-typography-body-font-weight: 400;
-    --ds-typography-body-letter-spacing: 0;
     --ds-typography-body-line-height: 1.5;
+    --ds-typography-body-font-variation-settings: "wght" 100, "opsz" 100, "wdth" 50;
+    --ds-typography-body-letter-spacing: 0;
     --ds-typography-body: var(--ds-typography-body-font-weight) var(--ds-typography-body-font-size)/var(--ds-typography-body-line-height) var(--ds-typography-body-font-family);
     --ds-typography-label-font-family: var(--ds-typography-subheading-font-family);
     --ds-typography-label-font-size: var(--ds-typography-subheading-font-size);
-    --ds-typography-label-font-variation-settings: var(--ds-typography-subheading-font-variation-settings);
     --ds-typography-label-font-weight: var(--ds-typography-subheading-font-weight);
     --ds-typography-label-line-height: var(--ds-typography-subheading-line-height);
     --ds-typography-label-letter-spacing: var(--ds-typography-subheading-letter-spacing);
+    --ds-typography-label-font-variation-settings: var(--ds-typography-subheading-font-variation-settings);
     --ds-typography-label-text-transform: var(--ds-typography-subheading-text-transform);
     --ds-typography-label: var(--ds-typography-label-font-weight) var(--ds-typography-label-font-size)/var(--ds-typography-label-line-height) var(--ds-typography-label-font-family);
   }
 }
-
