--- a/packages/plugin-css/test/fixtures/type-dimension/want.css
+++ b/packages/plugin-css/test/fixtures/type-dimension/want.css
@@ -23,7 +23,11 @@
 
 @media (width >= 600px) {
   :root {
+    --ds-control-default-size: var(--ds-space-600);
+    --ds-control-small-size: var(--ds-space-500);
     --ds-space-000: 0.25rem;
+    --ds-space-2x-large: 3rem;
+    --ds-space-3x-large: 4rem;
     --ds-space-100: 0.375rem;
     --ds-space-200: 0.75rem;
     --ds-space-300: 1rem;
@@ -33,7 +37,7 @@
     --ds-space-700: 3.5rem;
     --ds-space-800: 4rem;
     --ds-space-900: 6rem;
-    --ds-control-small-size: var(--ds-space-500);
-    --ds-control-default-size: var(--ds-space-600);
+    --ds-space-large: 1.5rem;
+    --ds-space-x-large: 2rem;
   }
 }
