--- a/packages/plugin-css/test/fixtures/hex/want.css
+++ b/packages/plugin-css/test/fixtures/hex/want.css
@@ -10,12 +10,12 @@
   --ds-color-blue-4: #218bff;
   --ds-color-blue-5: #0969da;
   --ds-color-blue-6: #0550ae;
+  --ds-color-text-action: var(--ds-color-blue-6);
   --ds-color-blue-7: #033d8b;
+  --ds-color-control-border-focus: var(--ds-color-blue-7);
   --ds-color-blue-8: #0a3069;
   --ds-color-blue-9: #002155;
-  --ds-color-control-border-focus: var(--ds-color-blue-7);
   --ds-color-hdr-blue: oklch(0.6334 0.2011 253.922);
-  --ds-color-text-action: var(--ds-color-blue-6);
   --ds-color-text-hdr: var(--ds-color-hdr-blue);
   --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
   --ds-gradient-default: var(--ds-gradient-blue-pink);
@@ -36,25 +36,6 @@
   }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --ds-color-blue-0: #ddf4ff;
-    --ds-color-blue-1: #b6e3ff;
-    --ds-color-blue-2: #80ccff;
-    --ds-color-blue-3: #54aeff;
-    --ds-color-blue-4: #218bff;
-    --ds-color-blue-5: #0969da;
-    --ds-color-blue-6: #0550ae;
-    --ds-color-blue-7: #033d8b;
-    --ds-color-blue-8: #0a3069;
-    --ds-color-blue-9: #002155;
-    --ds-color-control-border-focus: var(--ds-color-blue-7);
-    --ds-color-hdr-blue: oklch(0.6334 0.2011 253.922);
-    --ds-color-text-action: var(--ds-color-blue-6);
-    --ds-color-text-hdr: var(--ds-color-hdr-blue);
-  }
-}
-
 [data-color-theme="light"] {
   --ds-color-blue-0: #ddf4ff;
   --ds-color-blue-1: #b6e3ff;
@@ -63,37 +44,22 @@
   --ds-color-blue-4: #218bff;
   --ds-color-blue-5: #0969da;
   --ds-color-blue-6: #0550ae;
+  --ds-color-text-action: var(--ds-color-blue-6);
   --ds-color-blue-7: #033d8b;
+  --ds-color-control-border-focus: var(--ds-color-blue-7);
   --ds-color-blue-8: #0a3069;
   --ds-color-blue-9: #002155;
-  --ds-color-control-border-focus: var(--ds-color-blue-7);
   --ds-color-hdr-blue: oklch(0.6334 0.2011 253.922);
-  --ds-color-text-action: var(--ds-color-blue-6);
   --ds-color-text-hdr: var(--ds-color-hdr-blue);
-}
-
-@media (prefers-color-scheme: light) {
-  @media (color-gamut: p3) {
-    :root {
-      --ds-color-hdr-blue: oklch(0.6313 0.2184 253.284);
-      --ds-color-text-hdr: var(--ds-color-hdr-blue);
-    }
-  }
+  --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
+  --ds-gradient-default: var(--ds-gradient-blue-pink);
+  --ds-shadow: 0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f;
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="light"] {
     --ds-color-hdr-blue: oklch(0.6313 0.2184 253.284);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  @media (color-gamut: rec2020) {
-    :root {
-      --ds-color-hdr-blue: oklch(0.6337 0.2187 254.2013);
-      --ds-color-text-hdr: var(--ds-color-hdr-blue);
-    }
   }
 }
 
@@ -113,13 +79,34 @@
     --ds-color-blue-4: #388bfd;
     --ds-color-blue-5: #1f6feb;
     --ds-color-blue-6: #1158c7;
+    --ds-color-text-action: var(--ds-color-blue-5);
     --ds-color-blue-7: #0d419d;
+    --ds-color-control-border-focus: var(--ds-color-blue-6);
     --ds-color-blue-8: #0c2d6b;
     --ds-color-blue-9: #051d4d;
-    --ds-color-control-border-focus: var(--ds-color-blue-6);
     --ds-color-hdr-blue: oklch(0.6378 0.197 255.7476);
-    --ds-color-text-action: var(--ds-color-blue-5);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
+    --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
+    --ds-gradient-default: var(--ds-gradient-blue-pink);
+    --ds-shadow: 0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f;
+  }
+}
+
+@media (color-gamut: p3) {
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --ds-color-hdr-blue: oklch(0.6373 0.2123 255.9389);
+      --ds-color-text-hdr: var(--ds-color-hdr-blue);
+    }
+  }
+}
+
+@media (color-gamut: rec2020) {
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --ds-color-hdr-blue: oklch(0.6397 0.2128 256.8441);
+      --ds-color-text-hdr: var(--ds-color-hdr-blue);
+    }
   }
 }
 
@@ -131,37 +118,22 @@
   --ds-color-blue-4: #388bfd;
   --ds-color-blue-5: #1f6feb;
   --ds-color-blue-6: #1158c7;
+  --ds-color-text-action: var(--ds-color-blue-5);
   --ds-color-blue-7: #0d419d;
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-blue-8: #0c2d6b;
   --ds-color-blue-9: #051d4d;
-  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-hdr-blue: oklch(0.6378 0.197 255.7476);
-  --ds-color-text-action: var(--ds-color-blue-5);
   --ds-color-text-hdr: var(--ds-color-hdr-blue);
-}
-
-@media (prefers-color-scheme: dark) {
-  @media (color-gamut: p3) {
-    :root {
-      --ds-color-hdr-blue: oklch(0.6373 0.2123 255.9389);
-      --ds-color-text-hdr: var(--ds-color-hdr-blue);
-    }
-  }
+  --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
+  --ds-gradient-default: var(--ds-gradient-blue-pink);
+  --ds-shadow: 0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f;
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="dark"] {
     --ds-color-hdr-blue: oklch(0.6373 0.2123 255.9389);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  @media (color-gamut: rec2020) {
-    :root {
-      --ds-color-hdr-blue: oklch(0.6397 0.2128 256.8441);
-      --ds-color-text-hdr: var(--ds-color-hdr-blue);
-    }
   }
 }
 
@@ -180,13 +152,16 @@
   --ds-color-blue-4: #218bff;
   --ds-color-blue-5: #0969da;
   --ds-color-blue-6: #0550ae;
+  --ds-color-text-action: var(--ds-color-blue-6);
   --ds-color-blue-7: #033d8b;
+  --ds-color-control-border-focus: var(--ds-color-blue-7);
   --ds-color-blue-8: #0a3069;
   --ds-color-blue-9: #002155;
   --ds-color-hdr-blue: oklch(0.6334 0.2011 253.922);
-  --ds-color-text-action: var(--ds-color-blue-5);
-  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-text-hdr: var(--ds-color-hdr-blue);
+  --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
+  --ds-gradient-default: var(--ds-gradient-blue-pink);
+  --ds-shadow: 0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f;
 }
 
 @media (color-gamut: p3) {
@@ -211,13 +186,16 @@
   --ds-color-blue-4: #1168e3;
   --ds-color-blue-5: #0349b4;
   --ds-color-blue-6: #023b95;
+  --ds-color-text-action: var(--ds-color-blue-6);
   --ds-color-blue-7: #022f7a;
+  --ds-color-control-border-focus: var(--ds-color-blue-7);
   --ds-color-blue-8: #032563;
   --ds-color-blue-9: #021a4a;
   --ds-color-hdr-blue: oklch(0.5435 0.2531 262.092);
-  --ds-color-text-action: var(--ds-color-blue-5);
-  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-text-hdr: var(--ds-color-hdr-blue);
+  --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
+  --ds-gradient-default: var(--ds-gradient-blue-pink);
+  --ds-shadow: 0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f;
 }
 
 @media (color-gamut: p3) {
@@ -242,13 +220,16 @@
   --ds-color-blue-4: #4184e4;
   --ds-color-blue-5: #316dca;
   --ds-color-blue-6: #255ab2;
+  --ds-color-text-action: var(--ds-color-blue-5);
   --ds-color-blue-7: #1b4b91;
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-blue-8: #143d79;
   --ds-color-blue-9: #0f2d5c;
   --ds-color-hdr-blue: #4184e4;
-  --ds-color-text-action: var(--ds-color-blue-5);
-  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-text-hdr: var(--ds-color-hdr-blue);
+  --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
+  --ds-gradient-default: var(--ds-gradient-blue-pink);
+  --ds-shadow: 0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f;
 }
 
 [data-color-theme="dark-high-contrast"] {
@@ -259,13 +240,16 @@
   --ds-color-blue-4: #409eff;
   --ds-color-blue-5: #409eff;
   --ds-color-blue-6: #318bf8;
+  --ds-color-text-action: var(--ds-color-blue-5);
   --ds-color-blue-7: #2672f3;
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-blue-8: #1e60d5;
   --ds-color-blue-9: #194fb1;
   --ds-color-hdr-blue: oklch(0.6905 0.1695 249.7823);
-  --ds-color-text-action: var(--ds-color-blue-5);
-  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-text-hdr: var(--ds-color-hdr-blue);
+  --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
+  --ds-gradient-default: var(--ds-gradient-blue-pink);
+  --ds-shadow: 0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f;
 }
 
 @media (color-gamut: p3) {
@@ -290,13 +274,16 @@
   --ds-color-blue-4: #388bfd;
   --ds-color-blue-5: #1f6feb;
   --ds-color-blue-6: #1158c7;
+  --ds-color-text-action: var(--ds-color-blue-5);
   --ds-color-blue-7: #0d419d;
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-blue-8: #0c2d6b;
   --ds-color-blue-9: #051d4d;
   --ds-color-hdr-blue: oklch(0.6378 0.197 255.7476);
-  --ds-color-text-action: var(--ds-color-blue-5);
-  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-text-hdr: var(--ds-color-hdr-blue);
+  --ds-gradient-blue-pink: #218bff 0%, #e85aad 100%;
+  --ds-gradient-default: var(--ds-gradient-blue-pink);
+  --ds-shadow: 0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f;
 }
 
 @media (color-gamut: p3) {
