Add $root token support

--- a/packages/plugin-css/test/fixtures/hex/want.css
+++ b/packages/plugin-css/test/fixtures/hex/want.css
@@ -3,6 +3,7 @@
  * ------------------------------------------- */
 
 :root {
+  color-scheme: light dark;
   --ds-color-blue-0: #ddf4ff;
   --ds-color-blue-1: #b6e3ff;
   --ds-color-blue-2: #80ccff;
@@ -24,6 +25,7 @@
 
 @media (color-gamut: p3) {
   :root {
+    color-scheme: light dark;
     --ds-color-hdr-blue: oklch(0.6313 0.2184 253.284);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -31,12 +33,14 @@
 
 @media (color-gamut: rec2020) {
   :root {
+    color-scheme: light dark;
     --ds-color-hdr-blue: oklch(0.6337 0.2187 254.2013);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="light"] {
+  color-scheme: light;
   --ds-color-blue-0: #ddf4ff;
   --ds-color-blue-1: #b6e3ff;
   --ds-color-blue-2: #80ccff;
@@ -58,6 +62,7 @@
 
 @media (color-gamut: p3) {
   [data-color-theme="light"] {
+    color-scheme: light;
     --ds-color-hdr-blue: oklch(0.6313 0.2184 253.284);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -65,6 +70,7 @@
 
 @media (color-gamut: rec2020) {
   [data-color-theme="light"] {
+    color-scheme: light;
     --ds-color-hdr-blue: oklch(0.6337 0.2187 254.2013);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -72,6 +78,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    color-scheme: dark;
     --ds-color-blue-0: #cae8ff;
     --ds-color-blue-1: #a5d6ff;
     --ds-color-blue-2: #79c0ff;
@@ -95,6 +102,7 @@
 @media (color-gamut: p3) {
   @media (prefers-color-scheme: dark) {
     :root {
+      color-scheme: dark;
       --ds-color-hdr-blue: oklch(0.6373 0.2123 255.9389);
       --ds-color-text-hdr: var(--ds-color-hdr-blue);
     }
@@ -104,6 +112,7 @@
 @media (color-gamut: rec2020) {
   @media (prefers-color-scheme: dark) {
     :root {
+      color-scheme: dark;
       --ds-color-hdr-blue: oklch(0.6397 0.2128 256.8441);
       --ds-color-text-hdr: var(--ds-color-hdr-blue);
     }
@@ -111,6 +120,7 @@
 }
 
 [data-color-theme="dark"] {
+  color-scheme: dark;
   --ds-color-blue-0: #cae8ff;
   --ds-color-blue-1: #a5d6ff;
   --ds-color-blue-2: #79c0ff;
@@ -132,6 +142,7 @@
 
 @media (color-gamut: p3) {
   [data-color-theme="dark"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6373 0.2123 255.9389);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -139,6 +150,7 @@
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6397 0.2128 256.8441);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -213,6 +225,7 @@
 }
 
 [data-color-theme="dark-dimmed"] {
+  color-scheme: dark;
   --ds-color-blue-0: #c6e6ff;
   --ds-color-blue-1: #96d0ff;
   --ds-color-blue-2: #6cb6ff;
@@ -233,6 +246,7 @@
 }
 
 [data-color-theme="dark-high-contrast"] {
+  color-scheme: dark;
   --ds-color-blue-0: #caeaff;
   --ds-color-blue-1: #addcff;
   --ds-color-blue-2: #91cbff;
@@ -254,6 +268,7 @@
 
 @media (color-gamut: p3) {
   [data-color-theme="dark-high-contrast"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.695 0.1786 251.4698);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -261,12 +276,14 @@
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark-high-contrast"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6961 0.1798 251.8486);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="dark-colorblind"] {
+  color-scheme: dark;
   --ds-color-blue-0: #cae8ff;
   --ds-color-blue-1: #a5d6ff;
   --ds-color-blue-2: #79c0ff;
@@ -288,6 +305,7 @@
 
 @media (color-gamut: p3) {
   [data-color-theme="dark-colorblind"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6373 0.2123 255.9389);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -295,6 +313,7 @@
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark-colorblind"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6397 0.2128 256.8441);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
