--- a/packages/plugin-css/test/fixtures/type-color/want.css
+++ b/packages/plugin-css/test/fixtures/type-color/want.css
@@ -3,6 +3,7 @@
  * ------------------------------------------- */
 
 [data-color-theme="light"] {
+  color-scheme: light;
   --ds-color-alias-1: var(--ds-color-blue-6);
   --ds-color-alias-2: var(--ds-color-alias-1);
   --ds-color-alias-3: var(--ds-color-alias-2);
@@ -26,6 +27,7 @@
 
 @media (color-gamut: p3) {
   [data-color-theme="light"] {
+    color-scheme: light;
     --ds-color-hdr-blue: oklch(0.6313 0.2184 253.284);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -33,6 +35,7 @@
 
 @media (color-gamut: rec2020) {
   [data-color-theme="light"] {
+    color-scheme: light;
     --ds-color-hdr-blue: oklch(0.6337 0.2187 254.2013);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -111,6 +114,7 @@
 }
 
 [data-color-theme="dark"] {
+  color-scheme: dark;
   --ds-color-alias-1: var(--ds-color-blue-6);
   --ds-color-alias-2: var(--ds-color-alias-1);
   --ds-color-alias-3: var(--ds-color-alias-2);
@@ -134,6 +138,7 @@
 
 @media (color-gamut: p3) {
   [data-color-theme="dark"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6373 0.2123 255.9389);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -141,12 +146,14 @@
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6397 0.2128 256.8441);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="dark-dimmed"] {
+  color-scheme: dark;
   --ds-color-alias-1: var(--ds-color-blue-6);
   --ds-color-alias-2: var(--ds-color-alias-1);
   --ds-color-alias-3: var(--ds-color-alias-2);
@@ -169,6 +176,7 @@
 }
 
 [data-color-theme="dark-high-contrast"] {
+  color-scheme: dark;
   --ds-color-alias-1: var(--ds-color-blue-6);
   --ds-color-alias-2: var(--ds-color-alias-1);
   --ds-color-alias-3: var(--ds-color-alias-2);
@@ -192,6 +200,7 @@
 
 @media (color-gamut: p3) {
   [data-color-theme="dark-high-contrast"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.695 0.1786 251.4698);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -199,12 +208,14 @@
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark-high-contrast"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6961 0.1798 251.8486);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="dark-colorblind"] {
+  color-scheme: dark;
   --ds-color-alias-1: var(--ds-color-blue-6);
   --ds-color-alias-2: var(--ds-color-alias-1);
   --ds-color-alias-3: var(--ds-color-alias-2);
@@ -228,6 +239,7 @@
 
 @media (color-gamut: p3) {
   [data-color-theme="dark-colorblind"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6373 0.2123 255.9389);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
@@ -235,6 +247,7 @@
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark-colorblind"] {
+    color-scheme: dark;
     --ds-color-hdr-blue: oklch(0.6397 0.2128 256.8441);
     --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
