--- a/packages/plugin-css/test/fixtures/type-gradient/want.css
+++ b/packages/plugin-css/test/fixtures/type-gradient/want.css
@@ -3,21 +3,25 @@
  * ------------------------------------------- */
 
 [data-color-theme="light"] {
+  color-scheme: light;
   --ds-gradient-blue-to-green: oklch(0.4563 0.31 266.0798) 0%, oklch(0.8298 0.2089 154.0957) 100%;
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="light"] {
+    color-scheme: light;
     --ds-gradient-blue-to-green: oklch(0.4674 0.3199 265.3984) 0%, oklch(0.8245 0.2781 155.7383) 100%;
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="light"] {
+    color-scheme: light;
     --ds-gradient-blue-to-green: oklch(0.4559 0.328 265.76) 0%, oklch(0.8206 0.286 156.71) 100%;
   }
 }
 
 [data-color-theme="dark"] {
+  color-scheme: dark;
   --ds-gradient-blue-to-green: color(srgb 0 0.109 0.643) 0%, color(srgb 0 0.769 0.3772) 100%;
 }
