--- a/www/src/styles/docs.css
+++ b/www/src/styles/docs.css
@@ -53,7 +53,10 @@
 
     &:first-child {
       margin-block-start: 0;
-      padding-block-start: var(--tz-space-600);
+
+      @media (width > 750px) {
+        padding-block-start: var(--tz-space-600);
+      }
     }
   }
 
