Replace Culori with Color.js

--- a/packages/plugin-css/test/fixtures/ds-figma-sds/want.css
+++ b/packages/plugin-css/test/fixtures/ds-figma-sds/want.css
@@ -40,16 +40,16 @@
   --color-background-warning-secondary-hover: var(--color-yellow-300);
   --color-background-warning-tertiary: var(--color-yellow-100);
   --color-background-warning-tertiary-hover: var(--color-yellow-200);
-  --color-black-100: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.050980392156862744);
-  --color-black-200: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.10196078431372549);
-  --color-black-300: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.2);
-  --color-black-400: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.4);
-  --color-black-500: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.6980392156862745);
-  --color-black-600: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.8);
-  --color-black-700: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.8509803921568627);
-  --color-black-800: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.8980392156862745);
-  --color-black-900: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744 / 0.9490196078431372);
-  --color-black-1000: color(srgb 0.047058823529411764 0.047058823529411764 0.050980392156862744);
+  --color-black-100: rgb(4.7059% 4.7059% 5.098% / 0.05098);
+  --color-black-200: rgb(4.7059% 4.7059% 5.098% / 0.10196);
+  --color-black-300: rgb(4.7059% 4.7059% 5.098% / 0.2);
+  --color-black-400: rgb(4.7059% 4.7059% 5.098% / 0.4);
+  --color-black-500: rgb(4.7059% 4.7059% 5.098% / 0.69804);
+  --color-black-600: rgb(4.7059% 4.7059% 5.098% / 0.8);
+  --color-black-700: rgb(4.7059% 4.7059% 5.098% / 0.85098);
+  --color-black-800: rgb(4.7059% 4.7059% 5.098% / 0.89804);
+  --color-black-900: rgb(4.7059% 4.7059% 5.098% / 0.94902);
+  --color-black-1000: rgb(4.7059% 4.7059% 5.098%);
   --color-border-brand: var(--color-brand-800);
   --color-border-brand-secondary: var(--color-brand-600);
   --color-border-brand-tertiary: var(--color-brand-500);
@@ -69,12 +69,12 @@
   --color-border-warning: var(--color-yellow-900);
   --color-border-warning-secondary: var(--color-yellow-700);
   --color-border-warning-tertiary: var(--color-yellow-600);
-  --color-brand-100: color(srgb 0.9607843137254902 0.9607843137254902 0.9607843137254902);
+  --color-brand-100: rgb(96.078% 96.078% 96.078%);
   --color-icon-brand-on-brand: var(--color-brand-100);
   --color-text-brand-on-brand: var(--color-brand-100);
-  --color-brand-200: color(srgb 0.9019607843137255 0.9019607843137255 0.9019607843137255);
-  --color-brand-300: color(srgb 0.8509803921568627 0.8509803921568627 0.8509803921568627);
-  --color-brand-400: color(srgb 0.7019607843137254 0.7019607843137254 0.7019607843137254);
+  --color-brand-200: rgb(90.196% 90.196% 90.196%);
+  --color-brand-300: rgb(85.098% 85.098% 85.098%);
+  --color-brand-400: rgb(70.196% 70.196% 70.196%);
   --color-icon-disabled: var(--color-brand-400);
   --color-icon-disabled-on-disabled: var(--color-brand-400);
   --color-text-disabled: var(--color-brand-400);
@@ -95,10 +95,10 @@
   --color-icon-brand-on-brand-secondary: var(--color-brand-900);
   --color-text-brand-on-brand-secondary: var(--color-brand-900);
   --color-brand-1000: color(srgb 0.06666666666666667 0.06666666666666667 0.06666666666666667);
-  --color-gray-100: color(srgb 0.9607843137254902 0.9607843137254902 0.9607843137254902);
-  --color-gray-200: color(srgb 0.9019607843137255 0.9019607843137255 0.9019607843137255);
-  --color-gray-300: color(srgb 0.8509803921568627 0.8509803921568627 0.8509803921568627);
-  --color-gray-400: color(srgb 0.7019607843137254 0.7019607843137254 0.7019607843137254);
+  --color-gray-100: rgb(96.078% 96.078% 96.078%);
+  --color-gray-200: rgb(90.196% 90.196% 90.196%);
+  --color-gray-300: rgb(85.098% 85.098% 85.098%);
+  --color-gray-400: rgb(70.196% 70.196% 70.196%);
   --color-icon-default-tertiary: var(--color-gray-400);
   --color-text-default-tertiary: var(--color-gray-400);
   --color-gray-500: color(srgb 0.4588235294117647 0.4588235294117647 0.4588235294117647);
@@ -465,12 +465,12 @@
   --color-border-warning: var(--color-yellow-200);
   --color-border-warning-secondary: var(--color-yellow-400);
   --color-border-warning-tertiary: var(--color-yellow-600);
-  --color-brand-100: color(srgb 0.9607843137254902 0.9607843137254902 0.9607843137254902);
+  --color-brand-100: rgb(96.078% 96.078% 96.078%);
   --color-icon-brand-on-brand: var(--color-brand-900);
   --color-text-brand-on-brand: var(--color-brand-900);
-  --color-brand-200: color(srgb 0.9019607843137255 0.9019607843137255 0.9019607843137255);
-  --color-brand-300: color(srgb 0.8509803921568627 0.8509803921568627 0.8509803921568627);
-  --color-brand-400: color(srgb 0.7019607843137254 0.7019607843137254 0.7019607843137254);
+  --color-brand-200: rgb(90.196% 90.196% 90.196%);
+  --color-brand-300: rgb(85.098% 85.098% 85.098%);
+  --color-brand-400: rgb(70.196% 70.196% 70.196%);
   --color-icon-disabled: var(--color-brand-500);
   --color-icon-disabled-on-disabled: var(--color-brand-400);
   --color-text-disabled: var(--color-brand-500);
@@ -491,10 +491,10 @@
   --color-icon-brand-on-brand-secondary: var(--color-brand-100);
   --color-text-brand-on-brand-secondary: var(--color-brand-100);
   --color-brand-1000: color(srgb 0.06666666666666667 0.06666666666666667 0.06666666666666667);
-  --color-gray-100: color(srgb 0.9607843137254902 0.9607843137254902 0.9607843137254902);
-  --color-gray-200: color(srgb 0.9019607843137255 0.9019607843137255 0.9019607843137255);
-  --color-gray-300: color(srgb 0.8509803921568627 0.8509803921568627 0.8509803921568627);
-  --color-gray-400: color(srgb 0.7019607843137254 0.7019607843137254 0.7019607843137254);
+  --color-gray-100: rgb(96.078% 96.078% 96.078%);
+  --color-gray-200: rgb(90.196% 90.196% 90.196%);
+  --color-gray-300: rgb(85.098% 85.098% 85.098%);
+  --color-gray-400: rgb(70.196% 70.196% 70.196%);
   --color-icon-default-tertiary: var(--color-white-400);
   --color-text-default-tertiary: var(--color-white-400);
   --color-gray-500: color(srgb 0.4588235294117647 0.4588235294117647 0.4588235294117647);
